--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
 <body>
   <h1>Welcome to the Project DP</h1>
   <p>Making a chatting website for some special Friends.A Dumb boy dream.</p>
- <button class="cta-button" onclick="window.location.href='index.html'">Get Started</button>
+ <button class="cta-button" onclick="window.location.href='name.html'">Get Started</button>
 
 
 </body>
 </html>
+
