--- a/chat.html
+++ b/chat.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
   <title>Firebase Chat</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+    import { getDatabase, ref, push, onChildAdded, remove } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDn9cN6pnT2tbOWIOV2iLwk56Vc-3psTV8",
@@ -32,8 +33,8 @@
     const chatBox = document.getElementById("chatBox");
     const messageForm = document.getElementById("messageForm");
     const messageInput = document.getElementById("messageInput");
+    const deleteBtn = document.getElementById("deleteChatBtn");
 
-    // Send message
     messageForm.addEventListener("submit", (e) => {
       e.preventDefault();
       const text = messageInput.value.trim();
@@ -47,14 +48,42 @@
       }
     });
 
-    // Receive messages
     onChildAdded(messagesRef, (snapshot) => {
       const msg = snapshot.val();
+      const msgId = snapshot.key;
       const div = document.createElement("div");
       div.className = "message" + (msg.name === name ? " me" : "");
-      div.innerHTML = `<strong>${msg.name}:</strong> ${msg.text}`;
+      div.innerHTML = `
+        <strong>${msg.name}:</strong> ${msg.text}
+        ${msg.name === name ? `<button class="delBtn" data-id="${msgId}">🗑️</button>` : ""}
+      `;
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
+    });
+
+    deleteBtn.addEventListener("click", () => {
+      const confirmed = confirm("Are you sure you want to delete all messages?");
+      if (confirmed) {
+        remove(messagesRef)
+          .then(() => {
+            chatBox.innerHTML = "";
+            alert("All messages deleted.");
+          })
+          .catch((err) => {
+            alert("Error deleting chat: " + err.message);
+          });
+      }
+    });
+
+    chatBox.addEventListener("click", (e) => {
+      if (e.target.classList.contains("delBtn")) {
+        const id = e.target.getAttribute("data-id");
+        if (confirm("Delete this message?")) {
+          remove(ref(db, `messages/${id}`))
+            .then(() => console.log("Message deleted"))
+            .catch((err) => alert("Error deleting message: " + err.message));
+        }
+      }
     });
   </script>
   <style>
@@ -66,21 +95,30 @@
       height: 100vh;
       background: linear-gradient(to bottom right, #126767, #f3f4f6);
     }
-
     header {
       background: #5f8080;
       color: white;
       padding: 1rem;
       text-align: center;
       font-size: 1.25rem;
+      position: relative;
     }
-
+    #deleteChatBtn {
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      background-color: #ef4444;
+      color: white;
+      border: none;
+      padding: 0.4rem 0.8rem;
+      border-radius: 6px;
+      cursor: pointer;
+    }
     #chatBox {
       flex: 1;
       overflow-y: auto;
       padding: 1rem;
     }
-
     .message {
       background: #fff;
       padding: 10px;
@@ -89,20 +127,17 @@
       max-width: 75%;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-
     .message.me {
       background: #dcfce7;
       align-self: flex-end;
       margin-left: auto;
     }
-
     form {
       display: flex;
       padding: 1rem;
       background: white;
       border-top: 1px solid #ccc;
     }
-
     input {
       flex: 1;
       padding: 10px;
@@ -110,7 +145,6 @@
       border-radius: 8px;
       border: 1px solid #ccc;
     }
-
     button {
       padding: 10px 20px;
       margin-left: 10px;
@@ -120,16 +154,28 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
     button:hover {
       background: #0f5555;
+    }
+    .delBtn {
+      background: transparent;
+      border: none;
+      color: #ef4444;
+      cursor: pointer;
+      font-size: 0.9rem;
+      margin-left: 10px;
+    }
+    .delBtn:hover {
+      color: #dc2626;
     }
   </style>
 </head>
 <body>
-  <header>School Chat – Firebase</header>
+  <header>
+    School Chat – Firebase
+    <button id="deleteChatBtn">🗑️ Delete Chat</button>
+  </header>
   <div id="chatBox"></div>
-
   <form id="messageForm">
     <input type="text" id="messageInput" placeholder="Type your message..." autocomplete="off" required />
     <button type="submit">Send</button>
